feat: se implemento la lógica de negocio para usuarios y seguridad